# lumio

./: .gitignore  .prettierrc  eslint.config.js  forge.config.ts  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts  vite.main.config.ts  vite.preload.config.ts
electron/: main.ts  preload.ts  webtorrent.ts
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  ffmpeg.rs  lib.rs  server.rs  state.rs  subtitles.rs  torrent.rs
src/lib/: dev.ts  imdb.ts  omdb.ts  tmdb.ts  utils.ts
src/lib/app/: app.svelte.ts  index.ts  stream.svelte.ts
src/lib/components/app/: index.ts
src/lib/components/cards/: card-movie.svelte  index.ts
src/lib/components/carousels/: carousel-movies.svelte
src/lib/core/: index.ts
src/lib/database/: favorites.ts  index.ts
src/lib/icons/: audio-icon.svelte  caret-down-icon.svelte  caret-left-icon.svelte  caret-right-icon.svelte  check-rounded-icon.svelte  close-icon.svelte  cross-rounded-icon.svelte  heart-icon.svelte  home-icon.svelte  index.ts  pencil-icon.svelte  play-icon.svelte  plus-rounded-icon.svelte  spinner-icon.svelte  star-icon.svelte  trash-icon.svelte
src/lib/movies/: index.ts
src/lib/resources/: genres.svelte.ts  index.ts  movies.svelte.ts
src/lib/subtitles/: index.ts  wyzie.ts
src/lib/torrent/: provider.ts
src/lib/torrents/: sort.ts  thepiratebay.ts
src/lib/webtorrent/: index.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  page.svelte.test.ts
src/routes/favorites/: +page.svelte  +page.ts
(+110 files in other folders)
